--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: react-service
-  namespace: frontend
+  namespace: default
 spec:
   type: ClusterIP
   selector:
