--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -45,6 +45,8 @@ jobs:
       # Login to AWS ECR
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registry-type: public
 
       # Build & Push Docker Image to ECR
       - name: Build and push Docker image
