--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -4,9 +4,10 @@ metadata:
   name: react-service
   namespace: default
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: react-app
   ports:
     - port: 80
       targetPort: 80
+      
